# typster

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mjs
.github/workflows/: build-pkg.yml
package/: package.json  typster-0.0.0.tgz
package/src-tauri/: tauri.conf.json
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  data.json  lib.rs  main.rs  menu.rs
src-tauri/src/engine/: font.rs
src-tauri/src/ipc/: model.rs
src-tauri/src/ipc/commands/: clipboard.rs  fs.rs  mod.rs  typst.rs
src-tauri/src/ipc/events/: view.rs
src-tauri/src/project/: manager.rs  mod.rs  package.rs  project.rs  world.rs
src/components/: MonacoEditor.vue  MoveBar.vue  PageLoading.vue
src/pages/home/: Home.vue  Sidebar.vue  SidebarToggle.vue
src/pages/markdown/: MdxEditor.vue  MonacoEditor.vue  Sidebar.vue  interface.ts
src/pages/project/: AddProject.vue  Project.vue  interface.ts
src/pages/typst/: DiagnosticsTip.vue  PreviewPage.vue  TypstEditor.vue  ViewScale.vue  interface.ts
src/shared/: monaco-hook.ts  move-hook.ts  util.ts  window-max.ts
src/shared/lang/: completion.ts
src/store/: store.ts
src/style/: base.css  styles.css
tests/: main.typ  show.typ  works.bib
