[package]
name = "typster"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0"
arboard = "3.3"
base64 = "0.22"
enumset = { version = "1.1", features = ["serde"] }
png = "0.17"

hex = "0.4"

tauri = { version = "1.5", features = [ "http-all", "fs-all", "path-all", "dialog-all", "shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

siphasher = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
notify = "6.1"
comemo = "0.4.0"
chrono = "0.4"
dirs = "5.0"
walkdir = "2.5"
memmap2 = "0.9"
once_cell = "1.19"


typst = { git = "https://github.com/typst/typst", tag = "v0.11.0" }
typst-ide = { git = "https://github.com/typst/typst", tag = "v0.11.0" }
typst-pdf = { git = "https://github.com/typst/typst", tag = "v0.11.0" }
typst-render = { git = "https://github.com/typst/typst", tag = "v0.11.0" }


[features]
default = ["custom-protocol", "embed-fonts"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
embed-fonts = []
