[package]
name = "typster"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[lib]
name = "typster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
arboard = "3.3"
base64 = "0.22"
enumset = { version = "1.1", features = ["serde"] }
png = "0.17"

hex = "0.4"

tauri = { version = "2", features = [ "macos-private-api", "devtools", ] }

tauri-plugin-clipboard = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

siphasher = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
notify = "6.1"
comemo = "0.4.0"
chrono = "0.4"
dirs = "5.0"
walkdir = "2.5"
memmap2 = "0.9"
once_cell = "1.19"


typst = { version = "0.12.0" }
typst-ide = { version = "0.12.0" }
typst-pdf = { version = "0.12.0" }
typst-render = { version = "0.12.0" }
typst-syntax = { version = "0.12.0" }

ureq = { version = "2", default-features = false, features = ["native-tls", "gzip", "json"] }
ecow = { version = "0.2", features = ["serde"] }
native-tls = "0.2"
env_proxy = "0.4"
flate2 = "1"
tar = "0.4"



